completed todo essentials

--- a/src/Apps/Todo/accordionStyle.css
+++ b/src/Apps/Todo/accordionStyle.css
@@ -22,5 +22,5 @@
   
   .custom-accordion .body-complete {
     /* Change the background color of the accordion body */
-    background-color: #a2ffab;
+    background-color: #e8ffea;
   }
