finished ui of todo and created http of notepad

--- a/src/components/Apps/Todo/accordionStyle.css
+++ b/src/components/Apps/Todo/accordionStyle.css
@@ -1,7 +1,7 @@
 /* Add this to your CSS */
 .custom-accordion {
     /* Change the background color as needed */
-    background-color: #e80000;
+    /* background-color: #e80000; */
   }
   
   /* Optionally, you can style the accordion-button and accordion-body separately */
