created tooltip, global variable

--- a/src/components/Apps/Todo/accordionStyle.css
+++ b/src/components/Apps/Todo/accordionStyle.css
@@ -22,5 +22,5 @@
   
   .custom-accordion .body-complete {
     /* Change the background color of the accordion body */
-    background-color: #e8ffea;
+    background-color: #b9ffbf;
   }
