added noteapp ui

--- a/src/style/fonts.css
+++ b/src/style/fonts.css
@@ -6,6 +6,6 @@
 /* font-family: Playpen Sans, cursive */
 
 *{
-    font-family: Roboto, sans-serif;
-    /* font-family: Playpen Sans, cursive; */
+    /* font-family: Roboto, sans-serif; */
+    font-family: Playpen Sans, cursive;
 }
