--- a/src/components/Auth/Login.css
+++ b/src/components/Auth/Login.css
@@ -5,7 +5,7 @@
 
 
 body {
-    background: #ecf0f3;
+    background: #ffffff;
 }
 
 .wrapper {
@@ -13,9 +13,9 @@ body {
     min-height: 500px;
     margin: 80px auto;
     padding: 40px 30px 30px 30px;
-    background-color: #ecf0f3;
+    background-color: #585858;
     border-radius: 15px;
-    box-shadow: 13px 13px 20px #cbced1, -13px -13px 20px #fff;
+    box-shadow: 13px 13px 20px #191919, -13px -13px 20px #191919;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -29,10 +29,10 @@ body {
     height: 80px;
     object-fit: cover;
     border-radius: 50%;
-    box-shadow: 0px 0px 3px #5f5f5f,
-        0px 0px 0px 5px #ecf0f3,
-        8px 8px 15px #a7aaa7,
-        -8px -8px 15px #fff;
+    box-shadow: 0px 0px 3px #000000,
+        0px 0px 0px 5px #3f3f3f,
+        8px 8px 15px #000000,
+        -8px -8px 15px #5e5e5e;
 }
 
 .wrapper .name {
@@ -59,7 +59,7 @@ body {
     padding-left: 10px;
     margin-bottom: 20px;
     border-radius: 20px;
-    box-shadow: inset 8px 8px 8px #cbced1, inset -8px -8px 8px #fff;
+    box-shadow: inset 8px 8px 8px #373737, inset -8px -8px 8px #2c2c2c;
 }
 
 .wrapper .form-field .fas {
@@ -71,25 +71,25 @@ body {
     width: 100%;
     height: 40px;
     background-color: #03A9F4;
-    color: #fff;
+    color: #000000;
     border-radius: 25px;
-    box-shadow: 3px 3px 3px #b1b1b1,
-        -3px -3px 3px #fff;
+    box-shadow: 3px 3px 3px #353535,
+        -3px -3px 3px #353535;
     letter-spacing: 1.3px;
 }
 
 .wrapper .btn:hover {
-    background-color: #039BE5;
+    background-color: #039ae5c0;
 }
 
 .wrapper a {
     text-decoration: none;
     font-size: 0.8rem;
-    color: #03A9F4;
+    color: #ffffff;
 }
 
 .wrapper a:hover {
-    color: #039BE5;
+    color: #00aeff;
 }
 
 @media(max-width: 380px) {
